make overflow visible for sidebar to avoid clipping on color markers on color wheel

--- a/express/code/blocks/color-blindness/color-blindness.css
+++ b/express/code/blocks/color-blindness/color-blindness.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-400);
-  overflow: hidden;
+  overflow: visible;
 }
 
 .color-blindness color-wheel-express,
